--- a/login.html
+++ b/login.html
@@ -1,1 +1,18 @@
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+  <body>
+    <form>
+      <label> username </label> <input type="text" id="username" name="username"> <br>
+      <label> password </label> <input type="password" id="pw" name="pw"> <br>
+      <buttom type="submit" id="ok" name="ok" onclick=login()> login </buttom>
+    </form>
+    <script src="script.js"> </script>
+    
+  </body>
+</html>
