--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
     <div class="left-column"> <span>
       <ol>
           <a href="contents/gioithieubanthan.html" target="noidung" class="chu">giới thiệu bản thân</a>
-          <a href="contents/tkb.html" target="noidung">thời khoá biểu</a>
-          <a href="contents/huongnghiep.html" target="noidung"> hướng nghiệp</a>
-          <a href="contents/bai7.html" target="noidung"> dong gop </a>
+          <a href="contents/tkb.html" target="noidung" class="chu">thời khoá biểu</a>
+          <a href="contents/huongnghiep.html" target="noidung" class="chu"> hướng nghiệp</a>
+          <a href="contents/bai7.html" target="noidung" class="chu"> dong gop </a>
       </span> </div>
   <br>
      <div class="right-column"> <iframe  name="noidung"> </iframe>     </div>
