--- a/contents/huongnghiep.html
+++ b/contents/huongnghiep.html
@@ -1,2 +1,1 @@
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_xYj118FqXk?si=cRLhTsWVBJtsh8ED" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe value="video" width="560" height="315" src="https://www.youtube.com/embed/z1weRVlBDcg?si=xEPNoDwHQhX5sHqY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> </iframe>
