--- a/login.html
+++ b/login.html
@@ -10,19 +10,18 @@
 <body>
   <center> 
     <header>
-      <h1> Giới thiệu </h1>
+      <h1> Bài làm </h1>
     </header>
 
 <div class="main" >
-    <div class="left-column"> <span>
-      <ol>
+    <div class="menubar"> <span>
+    
           <a href="contents/gioithieubanthan.html" target="noidung" class="chu">giới thiệu bản thân</a>
           <a href="contents/tkb.html" target="noidung" class="chu">thời khoá biểu</a>
           <a href="contents/huongnghiep.html" target="noidung" class="chu"> hướng nghiệp</a>
           <a href="contents/bai7.html" target="noidung" class="chu"> dong gop </a>
       </span> </div>
-  <br>
-     <div class="right-column"> <iframe  name="noidung"> </iframe>     </div>
+     <div class="content"> <iframe  name="noidung"> </iframe>     </div>
 </div>
   
      <footer>
